include_directories(fei-base)
include_directories(fei-hypre)
include_directories(ml/src/include)

if (WITH_SUPERLU)
    add_definitions(-DHAVE_SUPERLU)
    #if (SUPERLU_INTERNAL)
    #    message(STATUS "Could not find an external SuperLU ${SUPERLU_VERSION} installation. Using internal routines.")
    #    include_directories(SuperLU/SRC)
    #    add_subdirectory(SuperLU)
    #    set(FEI_LIBS ${FEI_LIBS} $<TARGET_OBJECTS:HYPRE_superlu>)
    #endif()
endif()

if (HYPRE_USING_MLI)
    include_directories(femli)
    add_definitions(-DHAVE_MLI)
    if(WITH_SUPERLU)
        add_definitions(-DMLI_SUPERLU)
    endif()
    add_subdirectory(femli)
    set(FEI_LIBS ${FEI_LIBS} $<TARGET_OBJECTS:HYPRE_mli>)
endif()

add_subdirectory(fei-hypre)
set(FEI_LIBS ${FEI_LIBS} $<TARGET_OBJECTS:HYPRE_fei>)

set(FEI_LIBS ${FEI_LIBS} PARENT_SCOPE)
